--- a/public/css/style.css
+++ b/public/css/style.css
@@ -479,7 +479,9 @@ pre {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -15px;
-  margin-left: -15px; }
+  margin-left: -15px;
+  margin-bottom: -9%;
+}
 
 .no-gutters {
   margin-right: 0;
