--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1315,12 +1315,6 @@ textarea.form-control {
 	}
 }
 
-.ftco-no-pt{
-	padding-top: 0 !important;
-}
-.ftco-no-pb{
-	padding-bottom: 0 !important;
-}
 
 .ftco-bg-dark {
 	background: #3c312e;
@@ -1685,7 +1679,7 @@ textarea.form-control {
 		display: block;
 		margin-bottom: 5px;
 		text-transform: uppercase;
-		color: $primary;
+		color: red;
 		font-weight: 700;
 		letter-spacing: 2px;
 	}
