--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -293,14 +293,14 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-md-6 pr-md-4">
-    				<div class="heading-section pr-5 pb-5 ftco-animate">
+    				<div class="heading-sections pr-5 pb-5 ftco-animate">
     					<h1 class="big">Services</h1>
-	          	<span class="subheading">Exploration de nos prestations </span>
+	          	<span class="subheadings">Exploration de nos prestations </span>
 	            <h2 class="mb-4 mt-3">Nos services</h2>
 	            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 	          </div>
 	          <div class="services-wrap ftco-animate mb-5">
-	          	<a href="#" class="img d-flex align-items-end" style="background-image: url(images/services-1.jpg);">
+	          	<a href="#" class="img d-flex align-items-end bare" style="background-image: url(images/services-1.jpg);">
 	          		<div class="number">
 	          			<h3>Beauté</h3>
 	          		</div>
@@ -378,7 +378,7 @@
 	</section>
 	
 
-	<section class="ftco-section ftco-no-pb ftco-no-pt">
+	<section class="ftco-section ftco-no-pt">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 d-flex">
@@ -391,7 +391,7 @@
 					<div class="col-md-6 py-md-5 pb-5 wrap-about pb-md-5 ftco-animate">
 	          <div class="heading-section mb-4 mt-md-5">
 	          	<h1 class="big">A propos</h1>
-	          	<span class="subheading">A propos</span>
+	          	<span class="subheadings">A propos</span>
 	            <h2 class="mb-4">Comment ça marche...</h2>
 	          </div>
 	          <div class="pb-md-5">
@@ -454,7 +454,7 @@
     				<div class="text">
     					<div class="overlay"></div>
     					<div class="appointment-wrap">
-    						<span class="subheading">Reservation</span>
+    						<span class="subheadings">Reservation</span>
 								<h3 class="mb-2">Make an Appointment</h3>
 		    				<form action="#" class="appointment-form">
 			            <div class="row">
@@ -569,7 +569,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb">
+    <section class="ftco-section ftco-no-pt">
     	<div class="container">
     		<div class="row no-gutters justify-content-center mb-5 pb-2">
           <div class="col-md-6 text-center heading-section ftco-animate">
