--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -576,7 +576,7 @@
           	<h1 class="big">Gallery</h1>
           	<span class="subheading">WOrks</span>
             <h2 class="mb-4">Working on a Salon</h2>
-            <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <p id="work">Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
           </div>
         </div>
     	</div>
