--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -574,8 +574,8 @@
     		<div class="row no-gutters justify-content-center mb-5 pb-2">
           <div class="col-md-6 text-center heading-section ftco-animate">
           	<h1 class="big">Gallery</h1>
-          	<span class="subheading">WOrks</span>
-            <h2 class="mb-4">Working on a Salon</h2>
+          	<span class="subheading">Photos</span>
+            <h2 class="mb-4">Présentation en clichée</h2>
             <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
           </div>
         </div>
@@ -584,7 +584,7 @@
     		<div class="row no-gutters">
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="project">
-	    				<img src="images/work-1.jpg" class="img-fluid" alt="Colorlib Template">
+	    				<img src="images/spa1.jpg" class="img-fluid1" alt="Colorlib Template">
 	    				<div class="text">
 	    					<span>Stylist</span>
 	    					<h3><a href="project.html">Makeup</a></h3>
@@ -596,7 +596,7 @@
     			</div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="project">
-	    				<img src="images/work-2.jpg" class="img-fluid" alt="Colorlib Template">
+	    				<img src="images/coiffure2.jpg" class="img-fluid2" alt="Colorlib Template">
 	    				<div class="text">
 	    					<span>Beauty</span>
 	    					<h3><a href="project.html">Makeup</a></h3>
@@ -608,7 +608,7 @@
     			</div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="project">
-	    				<img src="images/work-3.jpg" class="img-fluid" alt="Colorlib Template">
+	    				<img src="images/massage3.jpg" class="img-fluid3" alt="Colorlib Template">
 	    				<div class="text">
 	    					<span>Beauty</span>
 	    					<h3><a href="project.html">Makeup</a></h3>
@@ -620,7 +620,7 @@
     			</div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="project">
-	    				<img src="images/work-4.jpg" class="img-fluid" alt="Colorlib Template">
+	    				<img src="images/beauté4.jpg" class="img-fluid4" alt="Colorlib Template">
 	    				<div class="text">
 	    					<span>Beauty</span>
 	    					<h3><a href="project.html">Makeup</a></h3>
@@ -632,7 +632,7 @@
     			</div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="project">
-	    				<img src="images/work-5.jpg" class="img-fluid" alt="Colorlib Template">
+	    				<img src="images/spa2.jpg" class="img-fluid5" alt="Colorlib Template">
 	    				<div class="text">
 	    					<span>Beauty</span>
 	    					<h3><a href="project.html">Makeup</a></h3>
@@ -644,7 +644,7 @@
     			</div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="project">
-	    				<img src="images/work-6.jpg" class="img-fluid" alt="Colorlib Template">
+	    				<img src="images/coiffure1.jpg" class="img-fluid6" alt="Colorlib Template">
 	    				<div class="text">
 	    					<span>Fashion</span>
 	    					<h3><a href="project.html">Model</a></h3>
@@ -656,7 +656,7 @@
     			</div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="project">
-	    				<img src="images/work-7.jpg" class="img-fluid" alt="Colorlib Template">
+	    				<img src="images/massage5.jpg" class="img-fluid7" alt="Colorlib Template">
 	    				<div class="text">
 	    					<span>Beauty</span>
 	    					<h3><a href="project.html">Makeup</a></h3>
@@ -668,7 +668,7 @@
     			</div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="project">
-	    				<img src="images/work-8.jpg" class="img-fluid" alt="Colorlib Template">
+	    				<img src="images/beauté5.jpg" class="img-fluid8" alt="Colorlib Template">
 	    				<div class="text">
 	    					<span>Beauty</span>
 	    					<h3><a href="project.html">Makeup</a></h3>
