--- a/public/css/style.css
+++ b/public/css/style.css
@@ -392,9 +392,44 @@ mark,
   .blockquote-footer::before {
     content: "\2014\00A0"; }
 
-.img-fluid {
-  max-width: 100%;
-  height: auto; }
+
+
+
+    .img-fluid1 {
+    max-width: 100%;
+    height: -1%; }
+
+    .img-fluid2 {
+    max-width: 100%;
+    height: 360px; }
+
+    .img-fluid3 {
+      max-width: 100%;
+      height: 360px; }
+
+    .img-fluid4 {
+      max-width: 100%;
+      height: 360px; }
+
+    .img-fluid5 {
+      width: 500px;
+      height: 350px; }
+
+    .img-fluid6 {
+      max-width: 100%;
+      height: 350px; }
+
+    .img-fluid7 {
+      max-width: 100%;
+      height: 350px; }
+
+    .img-fluid8 {
+      max-width: 100%;
+      height: 350px; }
+
+
+
+
 
 .img-thumbnail {
   padding: 0.25rem;
