--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -64,7 +64,7 @@
 <section>
         <div class="contain">
             <!-- <h6>Les évènements</h6> -->
-            <div class="row" style="margin-bottom: -9%;">
+            <div class="carous" style="margin-bottom: -9%;">
             
                 <div class="row__inner">
         
