--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -446,6 +446,44 @@
     </section>
 
 
+<!-- ================== DEBUT section Qui sommes-nous -->
+
+<section>
+	<div class="site-section">
+		<div class="container">
+		  <div class="row align-items-center">
+			<div class="col-md-5 mr-auto">
+			  <h2 class="serif font-weight-bold mb-3">WellSpa Spa &amp; Wellness</h2>
+			  <p class="font-weight-bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, consequuntur?</p>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea nesciunt, amet officia soluta, dolores dolor?</p>
+  
+			  <div class="social_29128">
+				
+				<a href="#"><span class="icon-twitter"></span></a>
+				<a href="#"><span class="icon-instagram"></span></a>
+				<a href="#"><span class="icon-facebook"></span></a>
+				<a href="#"><span class="icon-linkedin"></span></a>
+				
+			  </div>
+			</div>
+			<div class="col-md-6">
+			  <div class="d-flex align-items-center">
+				<div class="bg-img-1 mr-md-4 mt-md-5">
+					<img src="./images/about_1.jpg" alt="" srcset="">
+				</div>   
+				<div class="bg-img-1">
+					<img src="./images/about_2.jpg" alt="" srcset="">
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </div>
+</section>	
+<!-- ================== FIN section Qui sommes-nous -->
+
+
+
 
     <section class="ftco-section ftco-no-pt ftco-booking">
     	<div class="container-fluid px-0">
