--- a/public/css/carous.css
+++ b/public/css/carous.css
@@ -1,21 +1,8 @@
-/* body,
-html {
-  padding: 0 10px;
-  margin: 0;
-  background: #0e0f11;
-  color: #ecf0f1;
-  font-family: 'Open Sans', sans-serif;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-} */
+
 * {
   box-sizing: border-box;
 }
-h1,
-p {
+h1,p {
   text-align: center;
 }
 p {
@@ -24,10 +11,7 @@ p {
   margin: auto;
 }
 
-a:link,
-a:hover,
-a:active,
-a:visited {
+a:link,a:hover,a:active,a:visited {
   transition: color 150ms;
   color: #95a5a6;
   text-decoration: none;
@@ -97,6 +81,8 @@ a:hover {
   margin-left: -25px;
   width: 50px;
   height: 50px;
+
+
   /* border: 3px solid #ecf0f1;
   line-height: 50px;
   text-align: center;
