--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -35,3 +35,27 @@
 #work{
     margin-bottom: -30px;
 }
+
+.Qui-sommes{
+    height: 350px;
+    width: 330px;
+}
+
+
+.iza{
+    position: relative;
+    top: 12px;
+    left: 15%;
+    color:black;
+}
+
+.heading-section h1.big {
+    position: absolute;
+    top: -28px;
+    left: -8px;
+    right: -72px;
+    font-family: "Pacifico", cursive;
+    color: rgba(0, 0, 0, 0.05);
+    color: #f7f5f6;
+    font-size: 120px;
+    z-index: -1; }
