--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -62,3 +62,10 @@
 #phone{
     margin-top: 50px;
 }
+
+.testimony-img{
+    position: relative;
+    top: 100px;
+    left: 0px;
+    height: 80%;
+}
