--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -429,10 +429,10 @@
 			<div class="col-md-6">
 			  <div class="d-flex align-items-center">
 				<div class="bg-img-1 mr-md-4 mt-md-5">
-					<img src="./images/about_1.jpg" alt="" srcset="" class="Qui-sommes">
+					<img src="/images/about_1.jpg" alt="" srcset="" class="Qui-sommes">
 				</div>   
 				<div class="bg-img-1">
-					<img src="./images/about_2.jpg" alt="" srcset=""class="Qui-sommes">
+					<img src="/images/about_2.jpg" alt="" srcset=""class="Qui-sommes">
 				</div>
 			  </div>
 			</div>
