--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 
-   <section id="home-section" class="hero" style="background-image: url(images/bg.jpg);" data-stellar-background-ratio="0.5">
+   <section id="home-section" class="hero" style="background-image: url(images/fond-rose.jpg);" data-stellar-background-ratio="0.5">
     <div class="home-slider owl-carousel">
     <div class="slider-item js-fullheight">
         <div class="overlay"></div>
@@ -8,8 +8,8 @@
             <img class="one-third align-self-end order-md-last img-fluid" src="/images/bg_1.png" alt="">
             <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <div class="text mt-5">
-                    <span class="subheading">Site</span>
-                  <h1 class="mb-4">Cocooning SPA</h1>
+                    <span class="subheading">Programme</span>
+                  <h1 class="mb-4">Coiffure</h1>
                   <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
                   
                   <p><a href="#" class="btn btn-primary py-3 px-4">Decouvrir nos services</a></p>
@@ -27,7 +27,7 @@
             <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <div class="text mt-5">
                     <span class="subheading">Programme</span>
-                  <h1 class="mb-4">Evènementiel</h1>
+                  <h1 class="mb-4">Beauté</h1>
                   <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
                   
                   <p><a href="#" class="btn btn-primary py-3 px-4">Decouvrir nos services</a></p>
@@ -46,7 +46,7 @@
               <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                   <div class="text mt-5">
                       <span class="subheading">Programme</span>
-                    <h1 class="mb-4">Evènementiel</h1>
+                    <h1 class="mb-4">Massage</h1>
                     <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
                     
                     <p><a href="#" class="btn btn-primary py-3 px-4">Decouvrir nos services</a></p>
@@ -54,7 +54,26 @@
               </div>
             </div>
         </div>
-      </div>
+	  </div>
+	  
+
+	  <div class="slider-item js-fullheight">
+			<div class="overlay"></div>
+		  <div class="container-fluid p-0">
+			<div class="row d-flex no-gutters slider-text align-items-center justify-content-end" data-scrollax-parent="true">
+				<img class="one-third align-self-end order-md-last img-fluid" src="/images/spaDom.png" alt="">
+				<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="text mt-5">
+						<span class="subheading">Programme</span>
+					  <h1 class="mb-4">Spa</h1>
+					  <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
+					  
+					  <p><a href="#" class="btn btn-primary py-3 px-4">Decouvrir nos services</a></p>
+				  </div>
+				</div>
+			  </div>
+		  </div>
+		</div>
   </div>
 </section>
 
@@ -128,7 +147,7 @@
         
                 <div class="tile">
                 <div class="tile__media">
-                    <img class="tile__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSB-liH6BJD4dXuE-UwOsl4S2XfHzZHuGVmFgVRCIasdwOIE_ze" alt=""  />
+                    <img class="tile__img" src="https://www.tourmag.com/photo/art/grande/6261167-9355943.jpg?v=1390573666" alt=""  />
                 </div>
                 <div class="tile__details">
                     <div class="tile__title">
@@ -159,126 +178,7 @@
                 </div>
                 </div>
         
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-9.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-10.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-11.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-12.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-13.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-14.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-15.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-16.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-17.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-18.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
-        
-                <div class="tile">
-                <div class="tile__media">
-                    <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-19.jpg" alt=""  />
-                </div>
-                <div class="tile__details">
-                    <div class="tile__title">
-                    Top Gear
-                    </div>
-                </div>
-                </div>
+                
         
             </div>
             </div>
@@ -443,70 +343,93 @@
 <!-- ================== FIN section Qui sommes-nous -->
 
 
-    <section class="ftco-section ftco-no-pt ftco-booking">
-    	<div class="container-fluid px-0">
-    		<div class="row no-gutters d-md-flex justify-content-end">
-    			<div class="one-forth d-flex align-items-end">
-    				<div class="text">
-    					<div class="overlay"></div>
-    					<div class="appointment-wrap">
-    						<span class="subheadings">Reservation</span>
-								<h3 class="mb-2">Make an Appointment</h3>
-		    				<form action="#" class="appointment-form">
-			            <div class="row">
-			              <div class="col-sm-12">
-			                <div class="form-group">
-					              <input type="text" class="form-control" id="appointment_name" placeholder="Name">
-					            </div>
-			              </div>
-			              <div class="col-sm-12">
-			                <div class="form-group">
-					              <input type="text" class="form-control" id="appointment_email" placeholder="Email">
-					            </div>
-			              </div>
-				            <div class="col-sm-12">
-			                <div class="form-group">
-					              <div class="select-wrap">
-		                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-		                      <select name="" id="" class="form-control">
-		                      	<option value="">Professional Makeup</option>
-		                        <option value="">Manicure Pedicure</option>
-		                        <option value="">Body Treatment</option>
-		                        <option value="">Haircut Coloring</option>
-		                      </select>
-		                    </div>
-					            </div>
-			              </div>
-			              <div class="col-sm-12">
-			                <div class="form-group">
-			                  <input type="text" class="form-control appointment_date" placeholder="Date">
-			                </div>    
-			              </div>
-			              <div class="col-sm-12">
-			                <div class="form-group">
-			                  <input type="text" class="form-control appointment_time" placeholder="Time">
-			                </div>
-			              </div>
-			              <div class="col-sm-12">
-			                <div class="form-group">
-			                  <input type="text" class="form-control" id="phone" placeholder="Phone">
-			                </div>
-			              </div>
-				          </div>
-				          <div class="form-group">
-			              <input type="submit" value="Make an Appointment" class="btn btn-primary">
-			            </div>
-			          </form>
-		          </div>
-						</div>
-    			</div>
-					<div class="one-third">
-						<div class="img" style="background-image: url(images/bg-1.jpg);">
-						</div>
-					</div>
-    		</div>
-    	</div>
-    </section>
+<section class="ftco-section ftco-no-pt">
+		<div class="container">
+		<div class="row">
+	
+		<div class="col-md-6 py-md-5 pb-5 wrap-about pb-md-5 ftco-animate fadeInUp ftco-animated">
+		  <div class="heading-section mb-4 mt-md-5">
+			  <h1 class="big">A propos</h1>
+			  <span class="subheadings">A propos</span>
+			<h2 class="mb-4">Rejoignez-nous</h2>
+		  </div>
+		  
+		  <div class="pb-md-5">
+						<p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+		  
+						<form action="#" class="appointment-form">
+								<div class="row">
+									<div class="col-sm-12">
+										<div class="form-group">
+											<input type="text" class="form-control" id="appointment_name" placeholder="Name">
+										</div>
+									</div>
+									<div class="col-sm-12">
+										<div class="form-group">
+											<input type="text" class="form-control" id="appointment_email" placeholder="Email">
+										</div>
+									</div>
+							  <div class="col-sm-12">
+									<div class="form-group">
+									  <div class="select-wrap">
+											<div class="icon"><span class="ion-ios-arrow-down"></span></div>
+												<select name="" id="" class="form-control">
+													<option value="">Professional Makeup</option>
+													<option value="">Manicure Pedicure</option>
+													<option value="">Body Treatment</option>
+													<option value="">Haircut Coloring</option>
+												</select>
+									    </div>
+								    </div>
+								  </div>
+								  <div class="col-sm-12">
+									<div class="form-group">
+									  <input type="text" class="form-control appointment_date" placeholder="Date">
+									</div>    
+								  </div>
+								  <div class="col-sm-12">
+									  <input type="text" class="form-control appointment_time" placeholder="Time">
+									</div>
+								  </div>
+								  <div class="col-sm-12">
+									<div class="form-group phone">
+									  <input type="text" class="form-control" id="phone" placeholder="Phone">
+									</div>
+								  </div>
+								  <div class="form-group">
+									 <input type="submit" value="Envoyer" class="btn btn-primary">
+								   </div>
+					 </form>
+	
+	
+			</div>
+		  </div>
+	
+	
+	
+		  
+		  <div class="col-md-6 d-flex">
+		  <div class="p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
+			  <a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
+				  <span class="icon-play"></span>
+			  </a>
+		  </div>
+		  </div>
+		  </div>
+		</div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+    
 
 
     <section class="ftco-section ftco-team">
@@ -860,77 +783,4 @@
 
 
 
-	<section class="ftco-section ftco-no-pt">
-	<div class="container">
-	  <div class="row">
-
-	  <div class="col-md-6 py-md-5 pb-5 wrap-about pb-md-5 ftco-animate fadeInUp ftco-animated">
-	  <div class="heading-section mb-4 mt-md-5">
-		  <h1 class="big">A propos</h1>
-		  <span class="subheadings">A propos</span>
-		<h2 class="mb-4">Rejoignez-nous</h2>
-	  </div>
-	  <div class="pb-md-5">
-					<p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-	  
-					<form action="#" class="appointment-form">
-					<div class="row">
-						  <div class="col-sm-12">
-							   <div class="form-group">
-									   <input type="text" class="form-control" id="appointment_name" placeholder="Name">
-							   </div>
-						  </div>
-						  <div class="col-sm-12">
-							   <div class="form-group">
-								  <input type="text" class="form-control" id="appointment_email" placeholder="Email">
-						  </div>
-						  </div>
-						  <div class="col-sm-12">
-								<div class="form-group">
-									  <div class="select-wrap">
-								  <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-								  <select name="" id="" class="form-control">
-								   <option value="">Professional Makeup</option>
-									<option value="">Manicure Pedicure</option>
-									<option value="">Body Treatment</option>
-									<option value="">Haircut Coloring</option>
-								  </select>
-								</div>
-							  </div>
-							  </div>
-							  <div class="col-sm-12">
-								<div class="form-group">
-								  <input type="text" class="form-control appointment_date" placeholder="Date">
-								</div>    
-							  </div>
-							  <div class="col-sm-12">
-								  <input type="text" class="form-control appointment_time" placeholder="Time">
-								</div>
-							  </div>
-							  <div class="col-sm-12">
-								<div class="form-group phone">
-								  <input type="text" class="form-control" id="phone" placeholder="Phone">
-								</div>
-							  </div>
-							  <div class="form-group">
-								 <input type="submit" value="Envoyer" class="btn btn-primary">
-							   </div>
-				 </form>
-
-
-		</div>
-	  </div>
-
-
-
-	  
-	  <div class="col-md-6 d-flex">
-	  <div class="p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
-		  <a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
-			  <span class="icon-play"></span>
-		  </a>
-	  </div>
-      </div>
-	  </div>
-	</div>
-    </section>
+	
